--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,5 @@
     {{ "PAGES.HOME.TITLE" | translate }}
   </h1>
 
-  <a routerLink="/detail">Wirklich neu</a>
+  <a routerLink="/detail">Wirklich neu neu</a>
 </div>
